# Spectra-Launcher

./: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  release.txt
.github/workflows/: release.yml
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: BlockedModsModal.vue  CreateInstanceModal.vue  ExportInstanceModal.vue  InstanceContent.vue  InstanceIcon.vue  InstanceLogs.vue  InstanceMods.vue  InstanceSettings.vue  LinkModsModal.vue  LiveLogsModal.vue  ModrinthBrowser.vue  OnboardingModal.vue  SelectedInstanceCard.vue  SidebarInstanceItem.vue  TitlebarActivity.vue  WindowControls.vue
app/composables/: useActivityCenter.ts  useBlockedModsModal.ts  useCreateInstanceModal.ts  useCurseforge.ts  useExportModal.ts  useInstanceIcon.ts  useJava.ts  useLibraryLayout.ts  useLinkModsModal.ts  useMinecraftLaunch.ts  useMinecraftMeta.ts  useModrinth.ts  useModrinthBrowser.ts  useOnboarding.ts  usePlatform.ts  useSkinBust.ts  useSponsor.ts  useSystemMemory.ts  useTelemetry.ts
app/layouts/: default.vue
app/pages/: index.vue  screenshots.vue  settings.vue  skins.vue  worlds.vue
app/pages/instance/: [id].vue
app/plugins/: theme.client.ts
app/stores/: useAccountStore.ts  useInstancesStore.ts  useThemeStore.ts
app/types/: launcher.ts  modrinth.ts
app/utils/: instanceVisuals.ts  java.ts  modrinth.ts
docs/: ARCHITECTURE.md  PLAN-gallery-skins-modpack-updates.md  PLAN-packs-kill-logs.md  PRZEWODNIK.md
i18n/locales/: de.json  en.json  es.json  fr.json  pl.json  ru.json  zh.json
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  lib.rs  main.rs  models.rs  paths.rs  store.rs
src-tauri/src/commands/: auth.rs  content.rs  curseforge.rs  import.rs  instances.rs  java.rs  launch.rs  meta.rs  mod.rs  modrinth.rs  mods.rs  ping.rs  settings.rs  skins.rs
